--- a/css/main.css
+++ b/css/main.css
@@ -19,11 +19,12 @@ h2{
 form{
   display: flex;
   flex-direction: column;
-  padding: 2vw 4vw;
+  padding-left: 20%;
   width: 90%;
   max-width: 600px;
   border-radius: 10px;
 }
+
 
 form input, form textarea{
   border: 0;
@@ -42,6 +43,18 @@ form button{
   width: 150px;
   margin: 20px auto 0;
   cursor: pointer;
+}
+
+.slide{
+  margin: 0;
+  height: 100%;
+  width: 90%;
+  text-align: center;
+  color: white;
+}
+
+.slide img{
+  width: 50%;
 }
 
 .s1 div {
