--- a/css/main.css
+++ b/css/main.css
@@ -19,7 +19,6 @@ h2{
 form{
   display: flex;
   flex-direction: column;
-  padding-left: 20%;
   width: 90%;
   max-width: 600px;
   border-radius: 10px;
@@ -89,8 +88,28 @@ form button{
   padding-left: 10%;
 }
 
-.s4 div {
+.s4{
   padding-left: 5%;
+}
+
+.lang{
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  height: 100%;
+}
+
+.lang img{
+  height: 150px;
+  width: 150px;
+  filter: grayscale(100%);
+  transition: transform .2s;
+  padding-bottom: 10px;
+}
+
+.lang img:hover{
+  filter: brightness(100%);
+  transform:scale(1.2);
 }
 
 .s5 div {
