--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 h1 {
-  color: rgb(86, 34, 212);
+  color: rgb(108, 212, 34);
   font-size: 4em;
 }
 
@@ -10,6 +10,7 @@ body {
 p{
   font-size: 1.5em;
   color: white;
+  text-align: center;
 }
 
 h2{
@@ -19,18 +20,22 @@ h2{
 form{
   display: flex;
   flex-direction: column;
-  width: 90%;
-  max-width: 600px;
+  margin: 0%;
+  width: 100%;
   border-radius: 10px;
+  align-items: center;
+  
 }
 
 
 form input, form textarea{
   border: 0;
-  margin: 10px 0;
+  margin-bottom: 20px;
+  width: 50%;
   padding: 20px;
   outline: none;
   background: #333;
+  color: white;
 }
 
 form button{
@@ -76,20 +81,7 @@ form button{
 
 .s1 div {
   display: flex;
-  flex-direction: row;
-  padding-left:5% ;
-}
-
-.s2 div {
-  padding-left: 5%;
-}
-
-.s3 div h1{
-  padding-left: 10%;
-}
-
-.s4{
-  padding-left: 5%;
+  flex-direction: column;
 }
 
 .lang{
@@ -97,6 +89,7 @@ form button{
   flex-direction: row;
   width: 100%;
   height: 100%;
+  justify-content: center;
 }
 
 .lang img{
@@ -105,6 +98,7 @@ form button{
   filter: grayscale(100%);
   transition: transform .2s;
   padding-bottom: 10px;
+
 }
 
 .lang img:hover{
@@ -113,5 +107,6 @@ form button{
 }
 
 .s5 div {
-  padding-left: 5%;
+  display: flex;
+  flex-direction: column;
 }
