--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,7 @@
+*{
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
 h1 {
   color: rgb(108, 212, 34);
   font-size: 4em;
@@ -13,9 +17,6 @@ p{
   text-align: center;
 }
 
-h2{
-  color: white;
-}
 
 form{
   display: flex;
@@ -49,29 +50,86 @@ form button{
   cursor: pointer;
 }
 
+
+.header{
+  display: flex;
+  align-items: center;
+  padding: 30px 10%;
+  background-color: #333;
+  width: 100%;
+  max-width: 1200px;
+  top: 0px;
+  position: fixed;
+}
+
+.logo a{
+  color: white;
+  float: left;
+  text-decoration: none;
+  padding-right: 50px;
+  transition: color 0.3s ease 0s;
+}
+
+.logo a:hover{
+  color: rgb(108, 212, 34);
+}
+
+.nav_links {
+  list-style: none;
+  display: flex;
+}
+
+.nav_links li {
+  padding: 0px 20px;
+}
+
+.nav_links li a {
+  transition: color 0.3s ease 0s;
+}
+
+.nav_links li a:hover {
+  color: rgb(108, 212, 34);
+}
+
+.nav_links a {
+  font-weight: 500;
+  color: #edf0f1;
+  text-decoration: none;
+}
+
 .slide{
   margin: 0;
   height: 100%;
   width: 90%;
   text-align: center;
-  color: white;
 }
 
 .links {
   margin: auto;
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: space-evenly;
   width: 30%;
 }
 
 .links a{
-  text-decoration: none;
+  color: white;
+  transition: color 0.3s ease 0s;
 }
 
 .links a:hover{
-  text-decoration: underline;
-  text-decoration-color: white ;
+  color: rgb(108, 212, 34);
+}
+
+.slide a{
+  color: white;
+  padding: 10px;
+  text-decoration: none;
+  transition: color 0.3s ease 0s;
+}
+
+.slide a:hover{
+  color: rgb(108, 212, 34); ;
 }
 
 
@@ -79,14 +137,10 @@ form button{
   width: 50%;
 }
 
-.s1 div {
-  display: flex;
-  flex-direction: column;
-}
-
 .lang{
   display: flex;
-  flex-direction: row;
+  flex-direction:row;
+  flex-wrap: wrap;
   width: 100%;
   height: 100%;
   justify-content: center;
@@ -97,7 +151,7 @@ form button{
   width: 150px;
   filter: grayscale(100%);
   transition: transform .2s;
-  padding-bottom: 10px;
+  padding: 10px;
 
 }
 
